# PulsarTeam

./: .env.example  .gitignore  README.md  SECURITY_REVIEW.md  docker-compose.yml  package-lock.json  package.json
.claude/: list-proposals.mjs  refactor-survey-2026-07-02.md  refactor-survey.json
api/: .gitignore  Dockerfile  entrypoint.sh  package-lock.json  package.json  sandbox.Dockerfile
client/: Dockerfile  nginx.conf  package-lock.json
coder-service/: Dockerfile  requirements.txt
desktop/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
devops/: .env.example  docker-compose.post.sh  docker-compose.pre.sh  docker-compose.swarm.yml  init-secrets.sh
docs/: API_REFERENCE.md  CODER_SERVICE_AUTH.md  CONTAINER_LAUNCH_FLOW.md  GETTING_STARTED.md  JIRA_INTEGRATION.md  SECURITY_AUDIT.md  SECURITY_REVIEW.md  SUCCINCT_CONTAINER_LAUNCH.md  SWARM_API.md  SWARM_POOL_CONTAINER_LAUNCH.md  desktop-packaging.md  product-analysis-agents-swarm-ui.md  task-store-db-refactor-plan.md  unified-plugin-architecture.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json
office-engine/: .gitignore  README.md  pyproject.toml  requirements.txt
office-engine/office_engine/: __init__.py  convert.py  dispatch.py  mcp_server.py  util.py
office-engine/office_engine/tools/: __init__.py  docx_tools.py  pdf_tools.py  pptx_tools.py  xlsx_tools.py
office-engine/tests/: test_office.py
office-service/: Dockerfile
runner-service/: Dockerfile  README.md  requirements.txt
server/: Dockerfile  (+4 more)
(+532 files in other folders)
